# PyPkgTemplate

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  docker-build.sh  docker-run.sh  setup.cfg
docker/arm64/raspberry/: Dockerfile
src/my_package/: __init__.py
src/my_package/data/: example.txt
src/my_package/module_1/: __init__.py
src/my_package/module_2/: __init__.py  data_lib.py
