[metadata]
name = my_package
version = 0.0.1
author = HorusElohim
author_email = horuselohim@gmail.com
description = My package description
url = https://github.com/HorusElohim/PyProjectTemplate/
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = MIT
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
license_files =
  LICENSE.md

[options]
zip_safe = False
packages = find_namespace:
scripts =
        bin/my_package_cli
        bin/my_package_read_data
python_requires = >=3.6
include_package_data = True
package_dir=
    =src


# Same as requirements.txt
install_requires =
    # Here the python package required


[options.packages.find]
where = src
exclude =
    tests

# Console scripts
[options.entry_points]
console_scripts =
#  <name> = [<package>.[<subpackage>.]]<module>[:<object>.<object>]
#   my_package_cli = my_package.module_1:hello_world

[build-system]
requires = ["setuptools", "wheel"]

# PEP8 checking via flake8 is configured in .flake8
[flake8]
max-line-length = 132
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
per-file-ignores =
  __init__.py:F401

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true


